# interceptoraptor

./: .gitignore  Makefile  README.rst  setup.cfg
docs/: for_developers.rst  quickstart.rst  why_not_vcrpy.rst
example.d/swapi.d/: int.swapi.py  mock.py  script.swapi.py  swapi.py
src/interceptoraptor/: cli.py  decorator.py
src/interceptoraptor/storage/: __init__.py  sqllite3.py
tests/: dummy_module1.py  dummy_module2.py  dummy_module3.py  test_decorator.py  test_storage_sqllite3.py
