[metadata]
name = interceptoraptor
version = 0.0.2
description = Intercept banana environment data (a.k.a. another VCR.py)
long_description = file: README.rst
#, CHANGELOG.rst, LICENSE.rst
license = MIT License
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

requires-python = ">=3.8"

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pylint
    coverage
    flake8
    sphinx

deploy_to_pip =
    twine
    build

[options.entry_points]
console_scripts =
    interceptoraptor = interceptoraptor.cli:cli

[options.package_data]
* = README.rst

[pylint.BASIC]
include-naming-hint=yes

# Good variable names which should always be accepted, separated by a comma.
good-names=i,
           j,
           k,
           ex,
           Run,
           _,
           db

[pylint.FORMAT]
max-line-length = 123

[pylint]
disable = missing-docstring,invalid-name

[mypy]
strict = True
show_error_codes = True

[flake8]

ignore =
    # E501 line too long
    # replaced by pylint
    E501,

[coverage:run]
source = src/interceptoraptor
branch = True
source=src

[coverage:report]
show_missing = True
fail_under=65
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[tool:pytest]
addopts = --strict-markers -v
testpaths = tests
filterwarnings =
    error
